--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2005-05-04  Tim-Philipp Müller  <tim at centricular dot net>
+
+	* gst-libs/gst/play/play.c: (gst_play_set_location):
+	  Fix compilation with gcc4 and, while we're at it, use
+	  g_get_current_dir() instead of using getcwd() with a 
+	  ridiculously small buffer. (#302864)
+
 2005-05-03  Gergely Nagy  <algernon@bonehunter.rulez.org>
 
 	* ext/ogg/gstoggmux.c: Lower default max-page-delay and
