--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2005-05-04  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>
+
+	* ext/mad/gstmad.c: (gst_mad_chain):
+	  Don't use taglist twice (#302837).
+
 2005-05-04  Tim-Philipp Müller  <tim at centricular dot net>
 
 	* gst-libs/gst/play/play.c: (gst_play_set_location):
