--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,11 @@
 2005-05-05  Edward Hervey  <bilboed@bilboed.com>
 
 	* ext/faad/gstfaad.c: (gst_faad_sinkconnect), (gst_faad_chain):
+	Reverting previous patch, blame borked gentoo patches on faad2-2.0-r5 :(
+
+2005-05-05  Edward Hervey  <bilboed@bilboed.com>
+
+	* ext/faad/gstfaad.c: (gst_faad_sinkconnect), (gst_faad_chain):
 	faacDecInit[2]() uses (unsigned int *) and not (unsigned long *) for
 	the samplerate argument.
 
