--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,18 @@
+2005-05-05  Tim-Philipp Müller  <tim at centricular dot net>
+
+	* gst/audiorate/gstaudiorate.c: (gst_audiorate_class_init):
+	* gst/tcp/gstmultifdsink.c: (gst_multifdsink_class_init):
+	* gst/tcp/gsttcpclientsink.c: (gst_tcpclientsink_class_init):
+	* gst/tcp/gsttcpclientsrc.c: (gst_tcpclientsrc_class_init):
+	* gst/tcp/gsttcpserversink.c: (gst_tcpserversink_class_init):
+	* gst/tcp/gsttcpserversrc.c: (gst_tcpserversrc_class_init):
+	* gst/tcp/gsttcpsink.c: (gst_tcpsink_class_init):
+	* gst/tcp/gsttcpsrc.c: (gst_tcpsrc_class_init):
+	  Set object_class->get_property and object_class->set_property
+	  before installing any properties (hopefully makes build bots
+	  a bit happier, as this causes warnings during gst-register
+	  with some glib versions).
+
 2005-05-05  David Schleef  <ds@schleef.org>
 
 	* gst/videotestsrc/videotestsrc.c: Convert everything that
