--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2005-05-09  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>
+
+	* gst/playback/gstplaybin.c: (gst_play_bin_set_property),
+	(remove_sinks):
+	  Set volume in subsequent runs, too (#302813).
+
 2005-05-09  Jan Schmidt  <thaytan@mad.scientist.com>
 
 	* ext/gdk_pixbuf/pixbufscale.c: (gst_pixbufscale_link):
