--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2005-05-13  Luca Ognibene  <luogni@tin.it>
+
+	* gst/ffmpegcolorspace/gstffmpegcolorspace.c (gst_ffmpegcsp_caps_remove_format_info): 
+	* gst/ffmpegcolorspace/gstffmpegcodecmap.c (gst_ffmpeg_caps_to_pixfmt) 
+	(gst_ffmpeg_pixfmt_to_caps): 
+	  Add GRAY8 support to ffmpegcolorspace (mime is video/x-raw-gray),
+	  test with:
+	videotestsrc ! video/x-raw-rgb ! ffmpegcolorspace ! video/x-raw-gray ! ffmpegcolorspace ! video/x-raw-yuv ! xvimagesink
+
 2005-05-10  Luca Ognibene  <luogni@tin.it>
 
 	* ext/gdk_pixbuf/pixbufscale.c (gst_pixbufscale_link): 
