--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2005-05-13  Tim-Philipp Müller  <tim at centricular dot net>
+
+	* ext/musicbrainz/Makefile.am:
+	* ext/musicbrainz/blank-file.cpp:
+	  Add empty .cpp file to make libtool use g++ for the
+	  linking instead of gcc (fixes #303930).
+
 2005-05-13  Luca Ognibene  <luogni@tin.it>
 
 	* gst/ffmpegcolorspace/gstffmpegcolorspace.c (gst_ffmpegcsp_caps_remove_format_info): 
