--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+2005-05-13  David Schleef  <ds@schleef.org>
+
+	* sys/glsink/Makefile.am:
+	* sys/glsink/glimagesink.c:
+	* sys/glsink/glimagesink.h:
+	Rewrite glimagesink from scratch.  Lots more feature and bounds
+	checking.  Implement GstXOverlay.  Handles YUV if the
+	GL_MESA_ycbcr_texture extension is available.  Still has issues
+	with resizing that kinda look like X bugs.
+
 2005-05-13  Tim-Philipp Müller  <tim at centricular dot net>
 
 	* ext/musicbrainz/Makefile.am:
