--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2005-05-13  David Schleef  <ds@schleef.org>
+
+	* sys/glsink/glimagesink.c: Fix resizing issues.  Works well
+	in totem.
+
 2005-05-14  Benjamin Otte  <in7y118@public.uni-hamburg.de>
 
 	* gst/realmedia/rmdemux.c: (plugin_init):
