--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2005-05-14  David Schleef  <ds@schleef.org>
+
+	* sys/glsink/glimagesink.c: And remember to set the context
+	on the current thread, since there may be other glimagesinks.
+
 2005-05-13  David Schleef  <ds@schleef.org>
 
 	* sys/glsink/glimagesink.c:
