--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2005-05-17  David Schleef  <ds@schleef.org>
 
+	* ext/swfdec/gstswfdec.c: Create a tag indicating the version
+	of SWF file.  (Used by swfdec-mozilla-plugin.)
+
+2005-05-17  David Schleef  <ds@schleef.org>
+
 	* gst/librfb/Makefile.am:
 	* gst/librfb/gstrfbsrc.c:
 	* gst/librfb/rfb.h:
