--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2005-05-17  Thomas Vander Stichele  <thomas at apestaart dot org>
+
+	* gst/librfb/Makefile.am:
+	  disable build until gstrfbsrc.h gets added
+
 2005-05-17  David Schleef  <ds@schleef.org>
 
 	* ext/swfdec/gstswfdec.c: Create a tag indicating the version
