--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2005-05-17  Tim-Philipp Müller  <tim at centricular dot net>
+
+	* ext/raw1394/gstdv1394src.c: (gst_dv1394src_iso_receive):
+	  gcc4 strikes yet again (fixes #304284).
+
 2005-05-17  Thomas Vander Stichele  <thomas at apestaart dot org>
 
 	* gst/librfb/Makefile.am:
