--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2005-05-17  David Schleef  <ds@schleef.org>
+
+	* gst/librfb/rfb.h: Don't include a nonexistant header.
+
 2005-05-17  Tim-Philipp Müller  <tim at centricular dot net>
 
 	* ext/raw1394/gstdv1394src.c: (gst_dv1394src_iso_receive):
