--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2005-05-18  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>
+
+	* gst/wavparse/gstwavparse.c: (gst_wavparse_fmt):
+	  Fix for channels == 0 (#304588).
+
 2005-05-17  Luca Ognibene  <luogni@tin.it>
 
 	* gst/ffmpegcolorspace/gstffmpegcodecmap.c (gst_ffmpeg_caps_to_pixfmt) 
