po/POTFILES.in: More updates.
Original commit message from CVS:
* po/POTFILES.in:
More updates.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2005-05-18  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>
+
+	* po/POTFILES.in:
+	  More updates.
+
 2005-05-18  Benoit Amiaux  <benoit.amiaux@laposte.net>
 
 	Reviewed by:  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>
